Implement GIS Server Docker test stack (issue #38)
- Add docker-compose-test.yml: single-replica GIS Server + Keycloak + PostGIS
- Add keycloak-test-realm.json: idispatchx realm with dispatcher-client, gis-server clients, Dispatcher role, and test users
- Add generate-tiles.sh: builds tile fixtures from NLS rasters into SampleData/tiles/ (gitignored; ~500 MB)
- Add start.sh: builds images, auto-generates tiles if missing, starts stack, waits for health
- Add stop.sh: tears down stack and removes DB volume
- Add config.test-gis.json: Dispatcher Client config pointing at test stack
- Add SampleData/tiles/ to .gitignore
- Update plan: all tasks marked Done; document that tiles are gitignored

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>